<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQ">


    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/preguntas_frecuentes"
        android:textColor="#1232E4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/seleccione_la_pregunta_deseada_para_ver_su_respuesta"
        android:textColor="#035306"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/preg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:text="@string/_1_c_mo_funciona_keepcount"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resp1"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/keepcount_es_una_aplicaci_n_que_permite_llevar_una_contabilidad_personal_en_la_cual_se_debe_realizar_un_registro_para_poder_acceder_a_todas_sus_funcionalidades_ya_registrado_o_habiendo_iniciado_sesi_n_en_la_app_se_puede_acceder_a_las_interfaces_de_ingresos_para_registrar_el_dinero_que_se_recibe_gastos_para_registrar_todas_las_compras_que_realice_y_ver_registros_para_tener_acceso_a_todas_las_transacciones_registradas_en_la_app_adem_s_puede_revisar_los_datos_registrados_en_su_cuenta_y_modificar_alguno_si_lo_desea_ver_la_secci_n_de_preguntas_frecuentes_y_por_ltimo_cerrar_sesi_n_en_keepcount"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg1" />

    <TextView
        android:id="@+id/preg2"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_2_cu_les_son_los_permisos_que_debo_otorgar_a_la_app_para_poder_utilizarla"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp1" />

    <TextView
        android:id="@+id/resp2"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/acceso_a_la_ubicaci_n_del_dispositivo_encender_el_gps_acceso_a_la_c_mara_almacenamiento_y_tratamiento_de_datos_personales_de_acuerdo_con_la_ley_1581_de_2012"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg2" />

    <TextView
        android:id="@+id/preg3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_3_c_mo_puedo_ponerme_en_contacto_con_ustedes"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp2" />

    <TextView
        android:id="@+id/resp3"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/mediante_el_correo_de_soporte_keepcountg4_gmail_com"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg3" />

    <TextView
        android:id="@+id/preg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/_4_ofrecen_atenci_n_al_cliente"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp3" />

    <TextView
        android:id="@+id/resp4"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/si_por_medio_de_la_misma_direcci_n_de_correo_electr_nico_de_contacto_puede_realizar_cualquier_solicitud_keepcountg4_gmail_com"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg4" />

    <TextView
        android:id="@+id/preg5"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_5_qui_n_va_a_tener_acceso_a_la_informaci_n_que_suministre_en_la_app"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp4" />

    <TextView
        android:id="@+id/resp5"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/la_informaci_n_va_a_ser_almacenada_en_una_base_de_datos_que_no_va_a_ser_compartida_con_terceros"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg5" />

    <TextView
        android:id="@+id/preg6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/_6_de_d_nde_son_ustedes"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp5" />

    <TextView
        android:id="@+id/resp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/de_diferentes_ciudades_de_colombia"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg6" />

    <TextView
        android:id="@+id/preg7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/_7_qui_n_est_detr_s_del_proyecto"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp6" />

    <TextView
        android:id="@+id/resp7"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/somos_un_grupo_de_estudiantes_en_modalidad_virtual_de_la_universidad_tecnol_gica_de_pereira_utp_del_programa_de_formaci_n_en_programaci_n_del_ministerio_de_las_tic_llamado_misi_n_tic_2022"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg7" />

    <TextView
        android:id="@+id/preg8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/_8_por_qu_se_realiz_esta_app"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resp7" />

    <TextView
        android:id="@+id/resp8"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/se_realiz_como_proyecto_final_del_ciclo_de_desarrollo_m_vil_para_dar_soluci_n_al_problema_de_cada_persona_que_no_cuenta_con_una_herramienta_que_sea_f_cil_de_usar_para_llevar_su_contabilidad_personal_y_sin_tener_conocimientos_previos_sobre_el_tema_contable"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preg8" />

</androidx.constraintlayout.widget.ConstraintLayout>