<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryDarkColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btRegister"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:text="@string/tRegister"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:contentDescription="@string/tDescriptionW"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="314dp"
        android:layout_height="66dp"
        android:layout_marginTop="264dp"
        android:text="@string/tWelcome"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="106dp"
        android:text="@string/tLogin"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btfAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tFAQ"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegister" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="424dp"
        android:layout_height="42dp"
        android:background="@color/primaryDarkColor"
        android:text="@string/tRights"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>