<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#10316B">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="211dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/descriptionImage"
        app:layout_constraintBottom_toTopOf="@+id/boxEmailUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_keepcount" />

    <Button
        android:id="@+id/buttonRegisterFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/button_rounded_border"
        android:clickable="false"
        android:onClick="goToMainActivity"
        android:text="@string/tRegisterFinish"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegisterCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_border"
        android:clickable="false"
        android:onClick="goToMiCuentaActivity"
        android:text="@string/tCancelRegister"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterFinish" />

    <EditText
        android:id="@+id/boxEmailUser"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/tCampEmail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/boxPasswordUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/boxPasswordUser"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/tCampPassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>